--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mariadb": "^3.2.1"
+    "http-errors": "^2.0.0",
+    "mariadb": "^3.2.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
