--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js --prefix backend",
+    "start": "node backend/server.js",
     "client": "npm run dev --prefix frontend",
     "server": "nodemon backend/server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
