--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
