--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.67.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "use-react-screenshot": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
