--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -27,8 +27,7 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.67.0",
-    "swiper": "^11.0.5",
-    "use-react-screenshot": "^4.0.0"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
