[new feature]: client can rename Play ground characters and this renamed character also show in the Final PDF result.
[bug fix]: Only PlayGroundCharacter has been removed when it over in the banish icon

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mind-game",
-  "version": "3.0.0",
-  "description": "This is a mind game.",
+  "name": "conference-room",
+  "version": "4.5.0",
+  "description": "This is a conference room.",
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
