--- a/compose.yml
+++ b/compose.yml
@@ -9,7 +9,7 @@ services:
     ports: 
       - 3000:3000
     environment:
-      - VITE_API=http://localhost:4000
+      - VITE_API=http://127.0.0.1:4000
     networks:
       - conference-room-network
 
