--- a/compose.yml
+++ b/compose.yml
@@ -50,6 +50,8 @@ services:
   db:
     image: mariadb
     restart: always
+    ports:
+      - 3308:3306
     environment:
       MARIADB_ROOT_PASSWORD: 1234
     volumes:
