--- a/compose.yml
+++ b/compose.yml
@@ -1,31 +1,11 @@
 version: "3.8"
 
 services:
-  web:
-    depends_on:
-      - server
-    container_name: "conference_root_frontend"
-    build: ./frontend
-    ports: 
-      - 3000:3000
-    environment:
-      - VITE_API=http://127.0.0.1:4000
-    networks:
-      - conference-room-network
-
-    develop:
-      watch:
-        - path: ./frontend/package.json
-          action: rebuild
-        - path: ./frontend/package-lock.json
-          action: rebuild
-        - path: ./frontend
-          target: /app
-          action: sync
 
   server:
     depends_on:
       - db
+    image: zawadbinsharif/mind-map-game:4.5-Production
     container_name: "conference_root_backend"
     build: ./
     ports:
@@ -33,19 +13,6 @@ services:
     env_file: .env
     networks:
       - conference-room-network
-
-    develop:
-      watch:
-        - path: ./package.json
-          action: rebuild
-        - path: ./package-lock.json
-          action: rebuild
-        - path: .env
-          target: /app/.env
-          action: sync
-        - path: ./backend
-          target: /app/backend
-          action: sync
   
   db:
     image: mariadb
