--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -26,11 +26,15 @@ services:
   server:
     depends_on:
       - db
-    container_name: "conference_root_backend"
-    build: ./
+    container_name: "conference_room_backend"
+    build:
+      context: ./
+      dockerfile: Dockerfile.dev
     ports:
       - 4000:4000
     env_file: .env
+    volumes:
+      - backup_of_conference_room:/app/backend/public/uploads/people
     networks:
       - conference-room-network
 
@@ -49,17 +53,21 @@ services:
   
   db:
     image: mariadb
+    container_name: "conference_room_db"
     restart: always
     ports:
       - 3308:3306
     environment:
       MARIADB_ROOT_PASSWORD: 1234
     volumes:
-      - ./backup-volume:/backup
-      - ./backup.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_backup_of_conference_room:/var/lib/mysql
     networks:
       - conference-room-network
 
 networks:
   conference-room-network:
     driver: bridge
+
+volumes:
+  backup_of_conference_room:
+  db_backup_of_conference_room:
