--- a/compose.yml
+++ b/compose.yml
@@ -1,65 +1,39 @@
 version: "3.8"
 
 services:
-  web:
-    depends_on:
-      - server
-    container_name: "conference_root_frontend"
-    build: ./frontend
-    ports: 
-      - 3000:3000
-    environment:
-      - VITE_API=http://127.0.0.1:4000
-    networks:
-      - conference-room-network
-
-    develop:
-      watch:
-        - path: ./frontend/package.json
-          action: rebuild
-        - path: ./frontend/package-lock.json
-          action: rebuild
-        - path: ./frontend
-          target: /app
-          action: sync
 
   server:
     depends_on:
       - db
-    container_name: "conference_root_backend"
-    build: ./
+    container_name: "conference_room_backend"
+    build:
+      context: ./
+      dockerfile: Dockerfile.dev
     ports:
       - 4000:4000
     env_file: .env
+    volumes:
+      - backup_of_conference_room:/app/backend/public/uploads/people
     networks:
       - conference-room-network
 
-    develop:
-      watch:
-        - path: ./package.json
-          action: rebuild
-        - path: ./package-lock.json
-          action: rebuild
-        - path: .env
-          target: /app/.env
-          action: sync
-        - path: ./backend
-          target: /app/backend
-          action: sync
-  
   db:
     image: mariadb
+    container_name: "conference_room_db"
     restart: always
     ports:
       - 3308:3306
     environment:
       MARIADB_ROOT_PASSWORD: 1234
     volumes:
-      - ./backup-volume:/backup
-      - ./backup.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_backup_of_conference_room:/var/lib/mysql
     networks:
       - conference-room-network
 
 networks:
   conference-room-network:
     driver: bridge
+
+volumes:
+  backup_of_conference_room:
+  db_backup_of_conference_room:
