code clean up for V-4.6 production

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DATABASE_USER=root
 DATABASE_PASSWORD=1234
 DATABASE_PORT=3306
 
-NODE_ENV=devlopment
+NODE_ENV=production
 
 COOKIE_NAME=token
 # console.log(require("crypto").randomBytes(64).toString("hex"));
