fix some bugs of compose.dev.yml and Session name has been added on the top of the play ground

--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -34,7 +34,7 @@ services:
       - 4000:4000
     env_file: .env
     volumes:
-      - backup_of_conference_room:/app/backend/public/uploads/people
+      - backup_of_conference_room:/app/backend/public/
     networks:
       - conference-room-network
 
