--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
