--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.2.1",
-    "multer": "^1.4.5-lts.1",
-    "react-speech-recognition": "^3.10.0"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
